[package]
name = "abc157"
version = "0.1.0"
authors = ["Hiroki Sakano <h.sakano26@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc157-a", problem = { platform = "atcoder", contest = "abc157", index = "A", url = "https://atcoder.jp/contests/abc157/tasks/abc157_a" } }
b = { name = "abc157-b", problem = { platform = "atcoder", contest = "abc157", index = "B", url = "https://atcoder.jp/contests/abc157/tasks/abc157_b" } }
c = { name = "abc157-c", problem = { platform = "atcoder", contest = "abc157", index = "C", url = "https://atcoder.jp/contests/abc157/tasks/abc157_c" } }
d = { name = "abc157-d", problem = { platform = "atcoder", contest = "abc157", index = "D", url = "https://atcoder.jp/contests/abc157/tasks/abc157_d" } }
e = { name = "abc157-e", problem = { platform = "atcoder", contest = "abc157", index = "E", url = "https://atcoder.jp/contests/abc157/tasks/abc157_e" } }
f = { name = "abc157-f", problem = { platform = "atcoder", contest = "abc157", index = "F", url = "https://atcoder.jp/contests/abc157/tasks/abc157_f" } }

[[bin]]
name = "abc157-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc157-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc157-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc157-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc157-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc157-f"
path = "src/bin/f.rs"
[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.5.5"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
